--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,9 @@ dependencies = [
     "scipy>=1.10",
     "nilearn>=0.10",
     "pandas>=2.0",
+    "pooch>=1.8",
+    "h5py>=3.10",
+    "tqdm>=4.66",
 ]
 
 [project.optional-dependencies]
