feat: add bundled atlas system for zero-config usage
- Created src/ldk/data module with atlas discovery functions
- AtlasAggregation and RegionalDamage now default to bundled atlases
- Added package data configuration in pyproject.toml
- Users can now run RegionalDamage() without any setup

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -66,6 +66,9 @@ Repository = "https://github.com/lesion-decoding-toolkit/ldk"
 [tool.setuptools.packages.find]
 where = ["src"]
 
+[tool.setuptools.package-data]
+"ldk.data" = ["atlases/*.nii.gz", "atlases/*.txt", "atlases/*.md"]
+
 [tool.pytest.ini_options]
 testpaths = ["tests"]
 python_files = ["test_*.py"]
