--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,7 @@ dependencies = [
     "pooch>=1.8",
     "h5py>=3.10",
     "tqdm>=4.66",
+    "joblib>=1.3",
 ]
 
 [project.optional-dependencies]
