feat: replace print statements with ConsoleLogger in analysis modules
- Replace ~58 print() statements with logger calls across analysis modules
- FunctionalNetworkMapping: Use logger.info(), success(), progress()
  - Single-lesion analysis: 28 replacements
  - Vectorized batch processing: 11 replacements
  - Resampling helper: 2 replacements
- StructuralNetworkMapping: Use logger.section(), subsection(), info()
  - Main analysis flow: 6 replacements
  - Connectivity matrices computation: 11 replacements
- Implement proper verbose flag functionality
  - Essential info (sections, success) always shows
  - Detailed progress only with verbose=True
  - Consistent emoji symbols and formatting throughout
- Remove redundant if self.verbose checks (logger handles it automatically)
- All tests passing (41 tests: 24 logging + 17 repr)

This completes the logging system integration requested by the user to provide
consistent, professional output across all analysis modules with proper verbose
control.

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -5,6 +5,11 @@ recursive-include src/ldk/data *.nii.gz
 recursive-include src/ldk/data *.txt
 recursive-include src/ldk/data *.md
 
+# Include templates specifically
+include src/ldk/data/templates/MNI152_T1_1mm.nii.gz
+include src/ldk/data/templates/MNI152_T1_2mm.nii.gz
+include src/ldk/data/templates/README.md
+
 # Include documentation
 include README.md
 include LICENSE
