--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,7 @@ dependencies = [
     "h5py>=3.10",
     "tqdm>=4.66",
     "joblib>=1.3",
+    "nitransforms>=23.0",
 ]
 
 [project.optional-dependencies]
