--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,7 @@ dependencies = [
     "tqdm>=4.66",
     "joblib>=1.3",
     "nitransforms>=23.0",
+    "templateflow>=23.0",
 ]
 
 [project.optional-dependencies]
