--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,10 @@
 [build-system]
-requires = ["setuptools>=68.0", "wheel"]
+requires = ["setuptools>=68.0", "setuptools-scm>=8.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
 name = "lacuna"
-version = "0.1.0"
+dynamic = ["version"]
 description = "A scientific Python package for neuroimaging lesion analysis"
 readme = "README.md"
 requires-python = ">=3.10"
@@ -45,9 +45,13 @@ viz = [
 bids = [
     "pybids>=0.16",
 ]
+preprocess = [
+    "antspyx>=0.3",  # Optional: for native space registration
+]
 dev = [
     "pytest>=7.4",
     "pytest-cov>=4.1",
+    "pytest-xdist>=3.3",  # Parallel test execution
     "ruff>=0.1",
     "black>=23.0",
     "mypy>=1.5",
@@ -57,7 +61,7 @@ doc = [
     "sphinx-rtd-theme>=1.3",
 ]
 all = [
-    "lacuna[viz,bids,dev,doc]",
+    "lacuna[viz,bids,preprocess,dev,doc]",
 ]
 
 [project.urls]
@@ -68,6 +72,11 @@ Repository = "https://github.com/lacuna/lacuna"
 
 [tool.setuptools.packages.find]
 where = ["src"]
+
+[tool.setuptools_scm]
+write_to = "src/lacuna/_version.py"
+version_scheme = "python-simplified-semver"
+local_scheme = "no-local-version"
 
 [tool.setuptools.package-data]
 "lacuna.data" = [
