Implement Task Runner Pattern with Makefile + act
Replace act-only workflow with Three-Loop Testing Strategy:
- Inner Loop: Native commands (make test) - instant feedback
- Outer Loop: Native CI (make ci-native) - before commit
- Verification Loop: Docker/act (make ci-act) - before push

Benefits:
- Fast: Native tests run in ~5 seconds vs ~2 minutes with Docker
- Consistent: Same commands work everywhere (local, CI)
- No duplication: GitHub Actions call make commands
- act only for final verification, not daily dev

Key changes:
- Add Makefile as single source of truth for all commands
- Simplify GitHub Actions to call make commands
- Update copilot-instructions.md with three-loop strategy
- Update DEVELOPMENT.md with proper workflow guidance
- Remove old tests.yml (replaced by test.yml)

This follows industry best practice: run natively for speed,
verify with Docker only when needed.

--- a/.actrc
+++ b/.actrc
@@ -1,22 +1,20 @@
 # act configuration - run GitHub Actions locally
-# Usage: act [event] [options]
-# Examples:
-#   act -l                    # List all workflows
-#   act -j test              # Run test job
-#   act push                 # Simulate push event
+# Format: One argument per line
+# Comments are supported with #
 
-# Use medium-sized container with common tools installed
--P ubuntu-latest=catthehacker/ubuntu:act-latest
+# Use medium-sized Docker image with common tools
+-P
+ubuntu-latest=catthehacker/ubuntu:act-latest
 
 # Container architecture
---container-architecture linux/amd64
+--container-architecture
+linux/amd64
 
-# Performance optimizations
---reuse                      # Reuse containers between runs (faster)
---action-offline-mode        # Use cached actions/images when available
+# Reuse containers for faster subsequent runs
+--reuse
 
-# Bind mount workspace (avoid copying files into container)
+# Use cached actions and images when available
+--action-offline-mode
+
+# Bind mount workspace
 --bind
-
-# Dummy GitHub token (some actions check for it)
--s GITHUB_TOKEN=dummy_token
