--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -18,16 +18,11 @@ jobs:
           cache: 'pip'
 
       - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install ruff black mypy
+        run: pip install ruff black mypy
 
-      - name: Run Ruff
-        run: ruff check src tests
+      - name: Run linting
+        run: make lint
 
-      - name: Run Black
-        run: black --check src tests
-
-      - name: Run mypy
-        run: mypy src --ignore-missing-imports
+      - name: Run type checking
+        run: make typecheck
         continue-on-error: true
