--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,18 +26,13 @@ jobs:
           cache: 'pip'
 
       - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -e ".[dev]"
+        run: make setup
 
       - name: Run linting
-        run: |
-          ruff check src tests
-          black --check src tests
+        run: make lint
 
-      - name: Run tests
-        run: |
-          pytest -v --cov=lacuna --cov-report=xml --cov-report=term-missing -n auto
+      - name: Run tests with coverage
+        run: make test-coverage
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v4
