feat: implement fast/slow test separation strategy
- Add test categorization: unit (~38s), contract (~97s), integration
- New make commands: test-unit, test-contract, test-integration, test-fast, test-slow
- test-fast runs unit + contract with -x flag (~28s vs ~2min for all tests)
- Enhanced pytest markers: fast, slow, integration, contract, requires_mrtrix, requires_templateflow
- Document comprehensive testing strategy in docs/testing_strategy.md
- Update copilot-instructions.md with three-loop testing workflow
- Enable faster development cycle: run test-fast constantly (~30s), full tests before commit (~2min)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -101,9 +101,12 @@ addopts = [
     "--cov-report=xml",
 ]
 markers = [
-    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
-    "integration: marks tests as integration tests",
-    "contract: marks tests as contract tests",
+    "slow: marks tests as slow (e.g., downloads, heavy computation, >5s)",
+    "fast: marks tests as fast (unit tests, <1s each)",
+    "integration: marks tests as integration tests (multiple components)",
+    "contract: marks tests as contract/API tests (interface validation)",
+    "requires_mrtrix: requires MRtrix3 to be installed",
+    "requires_templateflow: requires internet access for template downloads",
 ]
 filterwarnings = [
     "error",
