fix: include bundled atlas NIfTI files in repository
Atlas .nii.gz files were gitignored but the tests depend on them.
Add exception in .gitignore for src/lacuna/data/atlases/*.nii.gz
to include the bundled Schaefer, Tian, and HCP atlases (~2.3 MB total).

This fixes CI failures where tests couldn't find bundled atlases.

--- a/.gitignore
+++ b/.gitignore
@@ -66,6 +66,8 @@ Thumbs.db
 *.nii
 !tests/fixtures/*.nii.gz
 !tests/fixtures/*.nii
+!src/lacuna/data/atlases/*.nii.gz
+!src/lacuna/data/templates/*.nii.gz
 
 # Documentation
 docs/_build/
