--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,9 +42,6 @@ dependencies = [
 viz = [
     "matplotlib>=3.7",
 ]
-bids = [
-    "pybids>=0.16",
-]
 preprocess = [
     "antspyx>=0.3",  # Optional: for native space registration
 ]
@@ -61,8 +58,11 @@ doc = [
     "sphinx-rtd-theme>=1.3",
 ]
 all = [
-    "lacuna[viz,bids,preprocess,dev,doc]",
+    "lacuna[viz,preprocess,dev,doc]",
 ]
+
+[project.scripts]
+lacuna = "lacuna.cli.main:main"
 
 [project.urls]
 Homepage = "https://github.com/lacuna/lacuna"
