feat: add YAML config file support for CLI
Add comprehensive YAML configuration support for cleaner CLI usage:
- New --config/-c flag to load configuration from YAML file
- New --generate-config flag to print a template config file
- Connectome options now use paths only (no registry names)
- Resolution auto-detected from image affine
- Renamed --structural-connectome to --structural-tractogram for clarity
- Renamed --space to --mask-space for clarity
- Add pyyaml to dependencies
- Add yaml and h5py to mypy ignore list for missing stubs

Config file allows cleaner specification of analyses without many CLI flags.
Use 'lacuna --generate-config > my_config.yaml' to get started.

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -5,6 +5,9 @@ recursive-include src/lacuna/data *.nii.gz
 recursive-include src/lacuna/data *.txt
 recursive-include src/lacuna/data *.md
 
+# Include CLI configuration templates
+include src/lacuna/cli/default_config.yaml
+
 # Include templates specifically
 include src/lacuna/data/templates/MNI152_T1_1mm.nii.gz
 include src/lacuna/data/templates/MNI152_T1_2mm.nii.gz
