--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,7 @@ dependencies = [
     "joblib>=1.3",
     "nitransforms>=23.0",
     "templateflow>=23.0",
+    "pyyaml>=6.0",
 ]
 
 [project.optional-dependencies]
@@ -196,5 +197,7 @@ module = [
     "scipy.*",
     "matplotlib.*",
     "pybids.*",
+    "yaml.*",
+    "h5py.*",
 ]
 ignore_missing_imports = true
