--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,6 +37,7 @@ dependencies = [
     "nitransforms>=23.0",
     "templateflow>=23.0",
     "pyyaml>=6.0",
+    "cloudscraper>=1.2",
 ]
 
 [project.optional-dependencies]
