chore: remove scripts/, docs/, specs/ from tracking
These development-only directories have been removed from git history
and added to .gitignore. They remain as local files only.

--- a/.gitignore
+++ b/.gitignore
@@ -89,7 +89,9 @@ notebooks/dev/
 # Keep example notebooks
 notebooks/
 
-# Specs
+# Development directories (local only, removed from git history)
+scripts/
+docs/
 specs/
 
 # direnv
