feat(fnm): add p-value and FDR-corrected p-value maps
Add pmap and pfdrmap outputs to FunctionalNetworkMapping analysis.
P-values are computed from t-statistics using a two-tailed t-test.
FDR correction uses Benjamini-Hochberg method via scipy.stats.

New parameters:
- compute_p_map: bool = True (enable/disable p-value computation)
- fdr_alpha: float | None = 0.05 (FDR significance threshold, None to disable)

Both maps are transformed to input space when return_in_input_space=True.
Updated CLI config with new parameters.

--- a/src/lacuna/cli/default_config.yaml
+++ b/src/lacuna/cli/default_config.yaml
@@ -95,9 +95,11 @@ analyses:
   #   connectome: functional  # Reference to connectomes section
   #   method: boes  # "boes" (mean) or "pini" (PCA-based)
   #   pini_percentile: 20  # For PINI method only
-  #   compute_t_map: true
+  #   compute_t_map: true  # Compute t-statistic map
+  #   compute_p_map: true  # Compute p-value map (two-tailed)
+  #   fdr_alpha: 0.05  # FDR correction alpha level (null to disable)
   #   # t_threshold: 3.0  # Optional threshold for binary mask
-  #   return_in_input_space: false
+  #   return_in_input_space: true  # Transform outputs to input mask space
 
   # StructuralNetworkMapping: Maps white matter disconnection
   # Requires MRtrix3 installation
@@ -119,6 +121,8 @@ analyses:
   #       - rmap
   #       - tmap
   #       - zmap
+  #       - pmap
+  #       - pfdrmap
   #     StructuralNetworkMapping: 
   #       - disconnection_map
   #   aggregation: mean  # mean, sum, percent, volume, median, std
