--- a/src/lacuna/cli/default_config.yaml
+++ b/src/lacuna/cli/default_config.yaml
@@ -98,7 +98,7 @@ analyses:
   #   compute_t_map: true  # Compute t-statistic map
   #   compute_p_map: true  # Compute p-value map (two-tailed)
   #   fdr_alpha: 0.05  # FDR correction alpha level (null to disable)
-  #   # t_threshold: 3.0  # Optional threshold for binary mask
+  #   # t_threshold: 9.0  # Optional threshold for binary mask
   #   return_in_input_space: true  # Transform outputs to input mask space
 
   # StructuralNetworkMapping: Maps white matter disconnection
@@ -123,6 +123,7 @@ analyses:
   #       - zmap
   #       - pmap
   #       - pfdrmap
+  #       - pfdrthresholdmap  # Binary mask of FDR-significant voxels
   #     StructuralNetworkMapping: 
   #       - disconnection_map
   #   aggregation: mean  # mean, sum, percent, volume, median, std
