--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,7 +13,7 @@ jobs:
       matrix:
         python-version: ["3.10", "3.11", "3.12"]
       fail-fast: false
-      max-parallel: 1  # Run sequentially to avoid resource exhaustion
+      # GitHub runs in parallel; local `act` runs sequentially via container reuse
 
     steps:
       - uses: actions/checkout@v4
