refactor: update CLI to use template_path instead of tdi_path
Align CLI config with simplified structural connectome API.
Replace tdi_path with template_path for output grid definition.
Add --custom-parcellation CLI option for user-provided atlases.

--- a/src/lacuna/cli/default_config.yaml
+++ b/src/lacuna/cli/default_config.yaml
@@ -67,7 +67,7 @@ connectomes:
   #   path: /path/to/dTOR.tck
   #   space: MNI152NLin6Asym
   #   resolution: 2  # Resolution of the TDI output
-  #   tdi_path: /path/to/precomputed_tdi.nii.gz  # Optional, speeds up processing
+  #   template_path: /path/to/template.nii.gz  # Optional, for output grid
 
 # =============================================================================
 # ANALYSES SECTION
