fix: convert mask_shape to native int for cleaner display
HDF5 attrs return numpy types which print as np.int64(91). Convert
to native Python ints for cleaner log output.

--- a/src/lacuna/cli/default_config.yaml
+++ b/src/lacuna/cli/default_config.yaml
@@ -66,7 +66,7 @@ connectomes:
   # structural:
   #   path: /path/to/dTOR.tck
   #   space: MNI152NLin6Asym
-  #   resolution: 2  # Resolution of the TDI output
+  #   resolution: 2  # Resolution of the output
   #   template_path: /path/to/template.nii.gz  # Optional, for output grid
 
 # =============================================================================
