refactor: use Figshare API with auth token for dTOR985 download
Replace cloudscraper with authenticated Figshare API approach to bypass
AWS WAF protection that was blocking automated downloads.

Changes:
- Add article_id field to ConnectomeSource for API-based downloads
- Add FIGSHARE_API_KEY env var and --api-key CLI support for dtor985
- Rewrite FigshareDownloader to use API authentication
- Replace cloudscraper dependency with requests
- Update CLI help to show both connectomes require API keys
- Update tests for new API-based approach

Get Figshare API key from: https://figshare.com/account/applications

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,7 +37,7 @@ dependencies = [
     "nitransforms>=23.0",
     "templateflow>=23.0",
     "pyyaml>=6.0",
-    "cloudscraper>=1.2",
+    "requests>=2.31",
 ]
 
 [project.optional-dependencies]
